--- a/index.html
+++ b/index.html
@@ -512,11 +512,8 @@
 
       </div>     
 
-
-
   </div>
 </div>
-
 
 </section>
 
@@ -557,7 +554,7 @@
         <p>CONTACTO</p>
       </div>
       <div class="col-lg-6">
-        <img src="images/Group 3.svg" alt="imagen funko" class="imagen-footer">
+        <img src="images/Group 3.svg" alt="imagen funko" id="imagen-footer">
       </div>
     </div>    
   </div>
